# blockify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  todo.txt
.devcontainer/: devcontainer.json
src/: errs.rs  essentials.rs  fxns.rs  lib.rs  main.rs  refs.rs  test.rs
src/axs/: algos.rs  dat.rs  detail.rs  mod.rs  time.rs  unit.rs
src/block/: chain.rs  merkle.rs  mod.rs
src/blockchain/consensus/: mod.rs  puzzles.rs
src/crypto/: merkle.rs  mod.rs  plus.rs  temp.rs
src/data/: mod.rs  unit.rs
src/error/: mod.rs
src/errs/: mod.rs
src/io/: README.md  mod.rs
src/macros/node_derive/: Cargo.toml
src/macros/record_derive/: Cargo.toml
src/macros/record_derive/src/: lib.rs
src/net/: README.md  mod.rs  node.rs  nodeserver.rs
src/node/: consensus.rs  mod.rs  node.rs  nodestuff.rs
src/node/consensus/: mod.rs
src/node/node/: mod.rs
src/record/: mod.rs
src/sec/: README.md  crypto.rs  errs.rs  merkle.rs  mod.rs  rscs.rs
src/tests/: mod.rs
src/trans/: README.md  algos.rs  block.rs  blocks.rs  chain.rs  image.rs  mod.rs  record.rs
src/trans/sqlite/: block.rs  chain.db  chain.rs  generic.rs  mod.rs  sqlite_block.rs  sqlite_chain.rs  unchained.rs
src/ver/: cons.rs  mod.rs  vers.rs
src/verification/: cons.rs  mod.rs
target2/doc_tests/trans/sqlite/sqlite_chain/tests/test_block/: block0.db  block1.db  chain.db
tests/: all_test.rs  block_test.rs  feature_tests.rs  gen_tests.rs  main_test.rs  mod.rs  test1.rs
tests/src/: lib.rs  main.rs
