[package]
name = "blockify"
version = "0.0.8"
description = "A general purpose blockchain library"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
diesel = { version = "2.0.4", optional = true, features = ["sqlite"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
image = "0.24.6"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"], optional = true }
rand = "0.7.3"
record_derive = { version = "0.2.2", optional = true }
ring = "0.16.20"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
untrusted = "0.9.0"

[dev-dependencies]
blockify = { path = ".", features = ["full"] }

[features]
default = ["crypto", "record"]
crypto = []
record = ["record_derive"]
unit = []
sqlite = ["diesel", "libsqlite3-sys"]
full = ["crypto", "record", "unit", "sqlite"]
