[package]
name = "blockify"
version = "0.0.9"
description = "A general purpose blockchain library"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["sqlite"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
rand = "0.7.3"
record_derive = "0.2.6"
ring = "0.16.20"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
untrusted = "0.9.0"

[dev-dependencies]
# blockify = { path = "." }