[package]
name = "record_derive"
version = "0.2.5"
description = "Derive macro for blockify::Record trait"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = "2.0.15"
